# zenith

./: .dockerignore  .env.example  .gitignore  CHANGES_SUMMARY.md  CI_CD_SETUP.md  CI_CD_SETUP_SUMMARY.md  DIGITALOCEAN_PORT_CHECK.md  DOCKER_QUICK_REFERENCE.md  Dockerfile  FILES_CREATED.md  Makefile  NGROK_SETUP_GUIDE.md  PORT_8000_DIAGNOSIS.md  PRODUCTION_CHECKLIST.md  PROJECT_PLAN.md  QUICK_START.md  README.md  README_DEPLOYMENT.md  agents.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  droplet_setup.md  generate_html.py  inventory.db  nginx.conf  pyproject.toml  requirements.txt  run_pipeline.sh  run_tests.sh  setup.sh  start-dev.sh  start_all.sh  start_dashboard.sh  verify-setup.sh
alembic/: env.py
deploy/: README.md  deploy-prod.sh  deploy-to-droplet.sh  digital-ocean-setup.sh  local-dev.sh  optimize-droplet.sh  setup-new-droplet.sh
docker/: docker-compose.yml
docs/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  WEBHOOK_SETUP.md  features.md  guidelines.md  schema-migrations.md  setup_requirements.md
infrastructure/: docker-compose.prod.yml  docker-compose.yml  nginx.conf
nginx/: README.md
scripts/: backup-databases.sh  check_port_8000.sh  docker-start.sh  run-migrations.sh  setup-webhook-production.py  setup-webhook.py  start-dev.sh  start_api.sh  start_ngrok_webhook.sh  verify-setup.sh
src/: config.py  main.py  models.py  settings.py  utils.py
tests/: conftest.py  test_access_control.py  test_account_linking.py  test_admin_reports.py  test_agent_e2e.py  test_agent_tools.py  test_crud.py  (+4 more)
(+35 files in other folders)
