[project]
name = "inventory-system"
version = "0.1.0"
description = "Voice-Managed Inventory System using FastAPI and Streamlit"
requires-python = ">=3.10"
authors = [
    {name = "Inventory Team", email = "team@example.com"}
]

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0",
    "openai==1.10.0",
    "httpx==0.26.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "streamlit==1.30.0",
    "pandas==2.1.4",
    "pydub==0.25.1",
    "python-dateutil==2.8.2",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

